homepage mobile fix spacing above title

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -150,7 +150,7 @@
     }
     .title {
       color: #585858;
-      padding: 5px 10px 5px 10px;
+      padding: 1px 10px 5px 10px;
       font-size: 15px;
       white-space: normal;
       font-weight: bold;
